# printf

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: workflow.yml
src/: CMakeLists.txt  printf.c
src/include/: printf.h
test/: CMakeLists.txt  test_suite.cpp
